--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -139,6 +139,16 @@
         <button type="button" data-dismiss="modal" class="btn btn-default">充值失败</button>
     </div>
 </div>
+
+
+{% endblock %} 
+{% block scripts %}
+
+<script src="../js/plugins/jquery/1.11.1/jquery.js" type="text/javascript"></script>
+<script src="../js/lib/jquery.flexigrid.js" type="text/javascript"></script>
+<script src="../js/common.js" type="text/javascript"></script>
+<script type="text/javascript" src="../js/plugins/bootstrap/3.3.5/js/bootstrap.min.js" charset="utf-8"></script>
+
 <!-- /.modal -->
 <script type="text/javascript">
     jQuery(document).ready(function () {
@@ -193,10 +203,6 @@
     }
 </script>
 <!-- END JAVASCRIPTS -->
-
-{% endblock %} 
-{% block scripts %}
-<script type="text/javascript" src="js/plugins/bootstrap/3.3.5/js/bootstrap.min.js" charset="utf-8"></script>
 
 <script type="text/javascript">
     $(function () {
