--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "layouts/master.html" %}
+{% extends "layouts/admin-master.html" %} 
 
 {% block body %}
     <div>
@@ -9,11 +9,11 @@
                 <table>
                     <tr>
                         <td><label for="username">Login: </label></td>
-                        <td><input id="username" name="username" value="lcm" type="text"/></td>
+                        <td><input id="username" name="username"  type="text"/></td>
                     </tr>
                     <tr>
                         <td><label for="password">Password: </label></td>
-                        <td><input id="password" name="password" value="lcm" type="password"/></td>
+                        <td><input id="password" name="password"  type="password"/></td>
                     </tr>
                     <tr>
                         <td>
