--- a/public/templates/admin/plan.html
+++ b/public/templates/admin/plan.html
@@ -1,20 +1,15 @@
 {% extends "layouts/admin-master.html" %} 
 {% block header%}
-<title>Bootstrap 中文文档 </title>
+<title>策略计划 </title>
 <link href="/css/admin.css" rel="stylesheet">
 {%endblock%}
 {% block body %}
 <div>
     <h1>
-        {@pre type="content" key="greeting"/}
+       策略计划
     </h1>
-    <p>
-        hello.
-    </p>
     <div id="pnlStrategy" name="panel">
         <div>
-            profile：<input type="text" style="width: 40px;" id="txtProfile" value="0.2" />
-            %
             <div>
               <a href="#" id="lnkAdvance">计划</a>  <a href="#" id="lnkStrategyPlan">自定义计划</a>   
             </div>
@@ -22,7 +17,7 @@
         <div id="pnlStrategyPlan">
             <div id="pnlPlanEdit" style="display: none;">
                 Name:<input type="text" id="txtPlanName" /><br />
-                Desc:<input type="text" id="txtPlanDesc" /><br />
+                Desc: <textarea id="txtPlanDesc" style="margin: 0px; width: 288px; height: 27px;" ></textarea>   <br />
                 stepAmount: <input type="text" id="txtStepAmount" /><br />
                 totalAmount: <input type="text" id="txtTotalAmount" /><br />
                 <br/>
@@ -31,25 +26,25 @@
                     <input type="button" id="btnCancelStrategyPlan" value="取消" />
                 </div>
             </div>
-
             <div id="pnlStrategys" style="display: none">
                 <div id="pnlStrategyStep">
                     <div id="step">
-                        <select id="step_siteA" data-group="1" name="sites"></select>:
-                        <select id="step_symbolA" data-group="1" name="symbols"></select> - 
-                        <select id="step_siteB" data-group="2" name="sites"></select>:
-                        <select id="step_symbolB" data-group="2" name="symbols"></select> 
+                        当<select id="step_siteA" data-group="1" name="sites"></select>:
+                        <select id="step_symbolA" data-group="1" name="symbols"></select> 
                         <select id="step_operate">
                             <option value=">=">>=</option>
                             <option value="<="><=</option>
                         </select>
-                        <input type="text" id="step_range" style="width: 40px;" />%时,
-                        <input type="text" maxlength="4" style="width: 40px;" id="step_amount" />
-                        <a href="#" id="step_submit">new</a> <a href="#" id="step_reset">reset</a>
+                        <select id="step_siteB" data-group="2" name="sites"></select>:
+                        <select id="step_symbolB" data-group="2" name="symbols"></select> 
+                        <input type="text" maxlength="5" id="step_range" style="width: 40px;" />%时,
+                        建仓<input type="text" maxlength="8" style="width: 80px;" id="step_amount" />个
+                   
                     </div>
                     <ul id="stepParams"></ul>  
                     <script type="text/template" id="tmplStepParams">
                         <li data-group="<%= step.id %>">
+                            <span name="operateType"> <%= step.operateType == 'buy' ? "做多" : "做空" %> </span>
                           site:  <span name="site"><%=  step.site %> </span>
                           IsPostOnly: <input type="checkbox" name="isPostOnly" value="Car" <%= step.isPostOnly ? checked="checked": "" %> /> 
                           step id: <input type="number" value="<%= step.id %>" name="stepId" min="1" max="2" />
@@ -65,12 +60,18 @@
                     </table>
                 </div>
                 <div>
-                    <input type="button" id="btnSaveStrategy" value="保存" />
+                    <input type="button" id="step_submit" value="new" />
+                    <input type="button" id="step_reset" value="reset" />
+                      <!--  <a href="#" id="step_submit">new</a> <a href="#" id="step_reset">reset</a>
+                     <input type="button" id="btnSaveStrategy" value="保存" /> -->
+                    <input type="button" id="btnEidtStrategyCancel" value="cancel" />
                 </div>
             </div>
-            <div id="pnlPlanList">
-                <input type="button" id="btnEditPlan" value="新建" />
-                <br />
+            <div id="pnlPlanList" >
+                <div style="margin-top: 10px; margin-bottom: 10px;">
+                        <input type="button" id="btnEditPlan" value="新建计划" />
+                </div>
+
                 <ul class="account_strategys" id="plansList">
                 </ul>
                 <script id="tmplPlanItem" type="text/template">
@@ -89,8 +90,8 @@
                             <div>
                                  当前状态： <%= plan.status %> 每步执行数量:<%= plan.stepAmount %> 预设执行总数：<%= plan.totalAmount %>
                                  <br> 
-                                 单步已委托数量： <%= plan.stepConsignAmount %>   任务已委托数量： <%= plan.totalConsignAmount %>
-                                 单步已成交数量： <%= plan.stepActualAmount %>   任务已成交数量： <%= plan.totalActualAmount %>
+                                 单步已委托数量： <%= plan.stepConsignAmount %> 任务已委托数量：<%= plan.totalConsignAmount %>
+                                 单步已成交数量： <%= plan.stepActualAmount %>任务已成交数量： <%= plan.totalActualAmount %>
                             </div>
                             <div>
                                 <%= plan.isValid ? '有效' : '已被停用' %>
@@ -156,7 +157,14 @@
             initSymbolItems($element,site);
             
             if(!_editStrategyId){
-                var steps = [{ id: group, site: site }];
+                var operateType;
+                var step_operate = $('#step_operate').val();
+                if(step_operate == '>=' || step_operate == '>'){
+                    operateType = (group == 1 ? 'sell' : 'buy');
+                } else {
+                    operateType = (group == 1 ? 'buy' : 'sell');
+                }
+                var steps = [{ id: group, site: site, operateType: operateType  }];
                 refreshStepParams(steps);
             }
         });
@@ -217,9 +225,11 @@
                 totalAmount: step_amount
             };
 
-            var res = checkStepValue(step);
-            if (!res.isSuccess) {
-                return alert(res.message);
+            if(!_editStrategyId){
+                var res = checkStepValue(step);
+                if (!res.isSuccess) {
+                    return alert(res.message);
+                }
             }
 
             var transferStrategy = getAdvanceStrategy(step);
@@ -240,6 +250,7 @@
        
         $('#btnEditPlan').click(function(){
             _editPlanId = '';
+            $('#pnlStrategy').hide();
             $('#pnlPlanEdit').show();
         });
 
@@ -264,6 +275,27 @@
             $('#pnlPlanEdit').hide();
         });
 
+        $('#btnEidtStrategyCancel').click(function(){
+            $('#pnlStrategys').hide();
+        })
+
+        var getOperateText = function(group){
+            var step_operate = $('#step_operate').val();
+            if(step_operate == '>=' || step_operate == '>'){
+                operateType = (group == 1 ? 'sell' : 'buy');
+            } else {
+                operateType = (group == 1 ? 'buy' : 'sell');
+            }
+            return (operateType == 'buy' ? '做多' : '做空')
+        }
+        $('#step_operate').change(function(){
+            var stepA_params = $(w.format('#stepParams li[data-group="{0}"]',1));
+            $(stepA_params).find('span[name="operateType"]').html(getOperateText(1));
+
+            var stepB_params = $(w.format('#stepParams li[data-group="{0}"]',2));
+            $(stepB_params).find('span[name="operateType"]').html(getOperateText(2));
+        });
+
         showStrategySteps();
         showPlans();
         refreshPlans();
@@ -280,7 +312,7 @@
         $('#step_amount').val('');
         $('#step_operate option[index="0"]').attr("selected",true);
         $('#stepParams').html('');
-        $('#step_submit').text('new');
+        $('#step_submit').val('new');
     }
 
     function refreshStepParams(steps){
@@ -384,6 +416,7 @@
             site: step.siteA, //平台名称
             side: step.stepA_side, //buy或sell
             symbol: step.symbolA, //cny、btc、ltc、usd
+            action: 'trade',
             isPostOnly: step.stepA_isPostOnly,
             previousOperate: step.stepA_id == 1 ? 0 : 1,
             nextOperate: step.stepA_id == 1 ? 2 : 0,
@@ -397,6 +430,7 @@
             site: step.siteB, //平台名称
             side: step.stepB_side, //buy或sell
             symbol: step.symbolB, //cny、btc、ltc、usd
+            action: 'trade',
             isPostOnly: step.stepB_isPostOnly,
             previousOperate: step.stepB_id == 1 ? 0 : 1,
             nextOperate: step.stepB_id == 1 ? 2 : 0,
@@ -430,28 +464,17 @@
         var operateA = strategy.operates[0];
         var operateB = strategy.operates[1];
 
-        var operate;
-        var stepA_orderAmount = operateA.side == 'buy' ? stepA_orderAmount : -stepA_orderAmount;
-        if(stepA_orderAmount > 0) {
-            operate = '<=';
-        } else {
-            operate = '>=';
-        }
-
         //获取条件表达式中的差价数值
-        var stepRange,condition = strategy.conditions[0];
+        var stepRange,conditionOperate,condition = strategy.conditions[0];
         var express = '(' + conditionOperates.join('|') + ')(.*)$';
         var reg = new RegExp(express,'ig');
         var matches = reg.exec(condition);
         if(matches && matches.index > -1){
-            var conditionOperate = matches[1];
+            conditionOperate = matches[1];
             var conditionValue = $.trim(matches[2]);
 
             var conditionItem = condition.substring(0,matches.index);
             stepRange = getConditionAmount(conditionValue);
-        }
-        if(!stepRange){
-            return;
         }
 
         var simpleStrategy = {
@@ -468,7 +491,7 @@
             stepB_id: operateB.id,
             stepB_side: operateB.side,
 
-            operate: operate,
+            operate: conditionOperate,
             priceRange: stepRange,
             totalAmount: strategy.totalAmount
         }
@@ -477,7 +500,9 @@
 
     function _getSymbolStepsCondition(step){
         //'(huobi.btc - okcoin.btc) / okcoin.btc > 0.1%'
-        return w.format('({0}.{1}.buy - {2}.{3}.sell) / {0}.{1}.buy {4} {5}%',step.siteA, step.symbolA,step.siteB, step.symbolB, step.operate, step.priceRange);
+        var isGreater = (step.operate == '>=' || step.operate == '>');
+        return w.format('({0}.{1}.{6} - {2}.{3}.{7}) / {0}.{1}.{6} {4} {5}%',step.siteA, step.symbolA,step.siteB, 
+                       step.symbolB, step.operate, step.priceRange, isGreater ? 'buy' : 'sell',isGreater ? 'sell' : 'buy');
     }
 
     function getConditionAmount(express){
@@ -526,6 +551,7 @@
 
             $('#pnlStrategys').show();
             $('#pnlPlanEdit').hide();
+            $('#stepParams').hide();
         });
 
         $('a[name="runPlan"]').click(function(){
@@ -618,11 +644,12 @@
         }).done(function (e) {
             if (e.isSuccess) {
                 _strategys = [];
+                $('#steps').html('');
                 for(var i = 0; i < e.strategys.length; i++){
                     var simpleStrategy = getSimpleStrategy(e.strategys[i]);
                     _strategys.push(simpleStrategy);
-                    showStrategySteps();
                 }
+                showStrategySteps();
             } else {
                 failFun ? failFun() : alert("系统错误，请稍后重试！");
             }
@@ -633,42 +660,23 @@
 
     //***********  STEPS s *******
     function showStrategySteps() {
-        // var priceRange = _strategy.order.priceRange || 0.2;
-        // $('#txtProfile').val(priceRange);
-        var table = $('<table/>');
-        for (var i = 0; i < _strategys.length; i++) {
-            var symbolItem = _strategys[i];
-            var tr = $('<tr/>').appendTo(table).css('padding-bottom', '10px');
+        var source = [];
+        for (var j = 0; j < _strategys.length; j++) {
+            var stepsLen = _strategys.length;
+            var step = _strategys[j];
 
-            // var $tdSymbol = $('<td/>').appendTo(tr).attr('valign', 'top')
-            //                 .css('min-width', '80px').css('padding','5px 0 5px 0');
-            var $tdSteps = $('<td/>').appendTo(tr).attr('valign', 'top').css('padding', '5px 0 5px 0');
+            source.push('<hr style=" border:1px dashed #ccc; border-style:dashed;" />');
+            var s = w.format('{0}:{1} - {2}:{3},当数值{4}{5}%时,建仓数量{6}个',step.siteA,step.symbolA,step.siteB, 
+                                step.symbolB,step.operate,step.priceRange,step.totalAmount);
+            source.push(s);
+            source.push('<br/>');
 
-            // $tdSymbol.html(symbolItem.symbol);
-            // if( i != symbols.length - 1){
-            //     $tdSymbol.css('border-bottom', '1px solid #ccc');
-            //     $tdSteps.css('border-bottom', '1px solid #ccc');
-            // }
-            var source = [];
-            for (var j = 0; j < _strategys.length; j++) {
-                var stepsLen = _strategys.length;
-                var step = _strategys[j];
-
-                source.push('<hr style=" border:1px dashed #ccc; border-style:dashed;" />');
-                var s = w.format('{0}:{1} - {2}:{3},当盈利点超过{4}%时,额度为{5}',step.siteA,step.symbolA,step.siteB, 
-                                    step.symbolB,step.priceRange,step.totalAmount);
-                source.push(s);
-                source.push('<br/>');
-
-                source.push(w.format('<a href="#" name="removeStep" data-id="{0}">remove</a>',step._id));
-                source.push(w.format('&nbsp;<a href="#" name="editStep" data-id="{0}">edit</a>',step._id));
-            }
-
-            $tdSteps.html(source.join(''));
+            source.push(w.format('<a href="#" name="editStep" data-id="{0}">edit</a>',step._id));
+            source.push(w.format('&nbsp;<a href="#" name="removeStep" data-id="{0}">delete</a>',step._id));
         }
 
         $('#steps').html('');
-        $('#steps').append(table);
+        $('#steps').append(source.join(''));
 
         $('a[name="removeStep"]').click(function(){
             var strategyId = $(this).attr('data-id');
@@ -691,11 +699,22 @@
     }
 
     function editStrategy(strategy){
+        var getOperateType = function(group){
+            var step_operate = strategy.operate;
+            if(step_operate == '>=' || step_operate == '>'){
+                operateType = (group == 1 ? 'sell' : 'buy');
+            } else {
+                operateType = (group == 1 ? 'buy' : 'sell');
+            }
+            return operateType;
+        }
         var steps = [{ 
             id: 1, 
+            operateType: getOperateType(1),
             site: strategy.siteA     
         },{
             id: 2, 
+            operateType: getOperateType(2),
             site: strategy.siteB 
         }];
         refreshStepParams(steps);
@@ -724,7 +743,8 @@
         $(stepB_params).find('select[name="step_side"]').val(strategy.stepB_side);
 
         _editStrategyId = strategy._id;
-        $('#step_submit').text('update');
+        $('#step_submit').val('update');
+        $('#stepParams').show();
     }
 
     function sortSteps(steps) {
