--- a/public/templates/layouts/admin-master.html
+++ b/public/templates/layouts/admin-master.html
@@ -28,16 +28,11 @@
 </header>
     <div class="wrapper">
         <div>
-            <a href="/admin/transferStrategy">transferStrategy </a>
-            <a href="/admin/transferStrategyLog">transferStrategyLog </a>
-            <a href="/personal">other</a>
-            <div style="display:none;">
-                <input type="button" id="btnAccount" data-panel="pnlAccount" value="accounts" />
-                <input type="button" id="btnClient" data-panel="pnlClient" value="client identifier" />
-                <input type="button" id="btnStrategy" data-panel="pnlStrategy" value="strategy" />
-                <input type="button" id="btnAccountStrategy" data-panel="pnlAccountStrategys" value="Account Strategy" />
-                <input type="button" id="btnOrders" data-panel="pnlOrders" value="Orders" />
-            </div>
+            <a href="/admin/plan">策略计划</a>
+            <a href="/admin/positions">账户仓位</a>
+            <a href="/admin/trade">委托列表</a>
+            <a href="/admin/wallets">资金管理</a>
+
         </div>
         {% block body %} This is the default content {% endblock %}
     </div>
